--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "symfony/symfony": "~2.3",
+        "symfony/symfony": ">2.3",
         "doctrine/orm": "~2.0"
     },
     "autoload": {
